remove all instances of ImmutableList